Starting to add buttons with other tabs
Using w3, I am trying to add header tab buttons that go to new or other sections with more information. I broke some stuff on accident. Going to come back to this.

--- a/index.html
+++ b/index.html
@@ -5,9 +5,50 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Watkins Work Shop</title>
-    <link rel="stylesheet" href="App/scss/style.css">
+    <link rel="stylesheet" href="App/CSS/style.css">
     
 </head>
+
+<button class="headertab" onclick="openPage('Home', this, 'white')"id="defaultOpen">Home</button>
+<button class="headertab" onclick="openPage('Blog', this, 'green')" >Blog</button>
+<button class="headertab" onclick="openPage('Contact', this, 'blue')">Contact</button>
+<button class="headertab" onclick="openPage('About', this, 'orange')">About</button>
+<button class="headertab" onclick="openPage('YouTube', this, 'red')">YouTube</button>
+<button class="headertab" onclick="openPage('Projects', this, 'purple')">Projects</button>
+
+
+
+<div id="Home" class="tabcontent">
+  <h3>Home</h3>
+  <p>Home is where the heart is..</p>
+</div>
+
+<div id="Blog" class="tabcontent">
+  <h3>Blog</h3>
+  <p>Blogs coming soon</p>
+</div>
+
+<div id="Contact" class="tabcontent">
+  <h3>Contact</h3>
+  <p>Al sorts of links coming soon</p>
+</div>
+
+<div id="About" class="tabcontent">
+  <h3>About</h3>
+  <p>Who I am and what I can do to add value.</p>
+</div>
+
+<div id="Youtube" class="tabcontent">
+    <h3>YouTube</h3>
+    <p>Check out the channel.</p>
+  </div>
+  
+  <div id="Projects" class="tabcontent">
+    <h3>Projects</h3>
+    <p>Personal and Professional Work Completed</p>
+  </div>
+
+
 <body>
     <h1>Welcome to my site</h1>
     <p>This is my first...technically second go at web dev and a journey of self teaching. The first was a failure due to lack of a real project/context but what you see here will be my repository of a major change on that front. Blog posts, projects, links to my soon to be established youtube channel. It will all be here all to hopefully add value to your own journey and be an accountablity system for me.</p>
