Goofing around and some broken stuff
Goofed around with color (its still super ugly) and also tried to experiment with line spacing, weight. I can't seem to get weight to respond. I also made a project card and hopefully Ill have something to put in there soon. Also hover as a psuedo class is cool, but I can't get that to work just yet.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
     <h2>Welcome! Also... why even build this?</h2>
     <p class="fullCard">This is my first...<em>technically</em> second go at web dev and a journey of self teaching. The first was a failure due to lack of a real project/context but what you see here will be my repository of a major change on that front. Blog posts, projects, links to my soon to be established youtube channel. It will all be here all to hopefully add value to your own journey and be an accountablity system for me.</p>
 
+<div class= "projectCard" class= "projectContent" class="projectText">
+    <H1>Project 1</H1>
+    <div class="projectDescription">
+        <p>My first project will go here when I actually have one.</p>
+    </div>
+</div>
+
+    
     <script src="App/js/script.js"></script>
 </body>
 </html>
