--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
 
 <body>
     <h1 class="titleCard">Watkins Workshop</h1>
+    <nav id="navbar">
+        <ul>
+          <li><a href="">Blog</a></li>
+          <li><a href="">Contact</a></li>
+          <li><a href="">YouTube</a></li>
+        </ul>
+      </nav>
     <h2>Welcome! Also... why even build this?</h2>
     <p class="fullCard">This is my first...<em>technically</em> second go at web dev and a journey of self teaching. The first was a failure due to lack of a real project/context but what you see here will be my repository of a major change on that front. Blog posts, projects, links to my soon to be established youtube channel. It will all be here all to hopefully add value to your own journey and be an accountablity system for me.</p>
 
