--- a/index.html
+++ b/index.html
@@ -29,6 +29,14 @@
     </div>
 </div>
 
+<div class= "projectCard" class= "projectContent" class="projectText">
+    <H1>Project 2</H1>
+    <div class="projectDescription">
+        <p>My second project will go here when I actually have one.</p>
+    </div>
+</div>
+
+
     
     <script src="App/js/script.js"></script>
 </body>
