--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Watkins Work Shop</title>
     <link rel="stylesheet" href="App/CSS/style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@100&display=swap" rel="stylesheet">
     
 </head>
 
@@ -19,8 +21,7 @@
           <li><a href="">YouTube</a></li>
         </ul>
       </nav>
-    <h2>Welcome! Also... why even build this?</h2>
-    <p class="fullCard">This is my first...<em>technically</em> second go at web dev and a journey of self teaching. The first was a failure due to lack of a real project/context but what you see here will be my repository of a major change on that front. Blog posts, projects, links to my soon to be established youtube channel. It will all be here all to hopefully add value to your own journey and be an accountablity system for me.</p>
+    <h2 class="fullCard">Welcome to the workshop! Projects are below. Other information and links along the bottom. Enjoy!</h2>
 
 <div class= "projectCard" class= "projectContent" class="projectText">
     <H1>Project 1</H1>
