Got hover to work
Finally starting to get this whole pseudo class thing. Got hover to work for my div elements, though I couldn't get it to go with my classes or nav elements. I am only using scale, but I plan to work with some of the other tools I saw offered by VS. There's all sorts of goodies

--- a/index.html
+++ b/index.html
@@ -14,28 +14,30 @@
 
 <body>
     <h1 class="titleCard">Watkins Workshop</h1>
-    <nav id="navbar">
-        <ul>
-          <li><a href="">Blog</a></li>
-          <li><a href="">Contact</a></li>
-          <li><a href="">YouTube</a></li>
-        </ul>
-      </nav>
+    
     <h2 class="fullCard">Welcome to the workshop! Projects are below. Other information and links along the bottom. Enjoy!</h2>
 
 <div class= "projectCard" class= "projectContent" class="projectText">
-    <H1>Project 1</H1>
+    <h1>Project 1</h1>
     <div class="projectDescription">
         <p>My first project will go here when I actually have one.</p>
     </div>
 </div>
 
 <div class= "projectCard" class= "projectContent" class="projectText">
-    <H1>Project 2</H1>
+    <h1>Project 2</h1>
     <div class="projectDescription">
         <p>My second project will go here when I actually have one.</p>
     </div>
 </div>
+
+<nav id="navbar">
+    <ul>
+      <li><a href="">Blog</a></li>
+      <li><a href="">Contact</a></li>
+      <li><a href="">YouTube</a></li>
+    </ul>
+  </nav>
 
 
     
