Animations are fun
Ill get my boxes next to eachother when I learn flexbox or boot strap. I figure itll be easier then. This CSS psuedo animatino is fun though.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
 </div>
 
-<div class= "projectCard2" class= "projectContent" class="projectText">
+<div class= "projectCard" class= "projectContent" class="projectText">
     <h1>Project 2</h1>
     <div class="projectDescription">
         <p>My second project will go here when I actually have one.</p>
